Further fixes to link jumping.

--- a/docs/css/landingpage.css
+++ b/docs/css/landingpage.css
@@ -5,7 +5,7 @@
     background-image: url("../images/jumbotron.jpg");
     background-size: cover;
 }
-img {
+img.img-responsive {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     zoom: 1;
 }
